[package]
name = "qemu_mips_cgi"
version = "0.9.0"
authors = ["Max Bellia <ma.bellia.98@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
#lto = true
#codegen-units = 1
#opt-level = 3
debug = true

[dependencies]
libafl = { path = "../../libafl/", features = ["qemu_cli", "std", "nautilus"]}
libafl_qemu = { path = "../../libafl_qemu/", features = ["mips", "be", "usermode"] }
rangemap = "1.0.3"
grammartec = "0.3.0"
percent-encoding = "2.2.0"